# indextables_spark

./: .gitignore  .scalafmt.conf  BACKLOG.md  CLAUDE.md  DISTRIBUTED_TRANSACTION_LOG_PLAN.md  INTEGRATION_TESTS.md  LICENSE  Makefile  PROTOCOL.md  Pipfile  README.md  SCALA_2.13_MIGRATION_PLAN.md  SCALA_2.13_TEST_EXECUTION_PLAN.md  SECURITY.md  TABLE_PROTOCOL.md  llms.txt  pom.xml  run_tests_individually.sh  run_tests_parallel.sh
.claude/: BACKLOG.md  CLAUDE.md
.github/: dependabot.yml
design/: 01_introduction_and_architecture.md  02_datasource_v2_api.md  03_transaction_log.md  05_write_operations.md  06_partition_support.md  08_storage_and_caching.md  09_sql_extensions_and_commands.md  10_configuration_system.md  11_performance_optimizations.md  12_error_handling_and_resilience.md  13_integration_points.md  14_testing_and_validation.md  15_usage_examples.md  16_appendices.md  BUCKET_AGGREGATION_INTEGRATION.md  FFI_PROFILER_SQL_COMMANDS.md  TRANSACTION_LOG_COMPRESSION_DESIGN.md  cross_reference_indexing_design.md
docs/: ANTLR_SQL_PARSING_GUIDE.md  ARCHITECTURE.md  AVRO_STATE_FILE_DESIGN.md  CHECKPOINT_STATISTICS_TRUNCATION_IMPLEMENTATION.md  COMPONENT_INTERACTIONS.md  DATA_FLOW.md  DATA_SKIPPING_STATS_TRUNCATION_DESIGN.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN.md  GITHUB_ISSUE_16_RESOLUTION.md  INDEXQUERYALL_OPERATOR_DESIGN.md  INDEXQUERY_OPERATOR_DESIGN.md  INTEGRATION_TESTS.md  IP_ADDRESS_ENCODING_AND_QUERYING.md  (+16 more)
src/main/rust/: Cargo.toml
src/main/rust/src/: config.rs  error.rs  errors.rs  index_manager.rs  indexing.rs  lib.rs  schema_mapper.rs  search.rs
(+1225 files in other folders)
