[package]
name = "tantivy-jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "tantivy_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
tantivy = "0.22"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
async-trait = "0.1"

[features]
default = []