[package]
name = "tantivy4spark-jni"
version = "1.0.0"
edition = "2021"

[lib]
name = "tantivy4spark"
crate-type = ["cdylib"]

[dependencies]
tantivy = "0.22"
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4"
rand = "0.8"
base64 = "0.21"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]